--- a/source/AndroidManifest.xml
+++ b/source/AndroidManifest.xml
@@ -18,7 +18,10 @@
           package="com.android.accessorydisplay.source" >
 
     <uses-feature android:name="android.hardware.usb.accessory"/>
-    <uses-sdk android:minSdkVersion="18" />
+    <uses-sdk android:minSdkVersion="19" />
+    <uses-permission android:name="android.permission.CAPTURE_AUDIO_OUTPUT" />  
+    <uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT"/>  
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> 
 
     <application android:label="@string/app_name"
             android:icon="@drawable/ic_app"
